<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            android:layout_gravity="left"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:text="@string/movie_title"/>

        <TextView
            android:id="@+id/movieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:paddingTop="4dp"
            android:text="@string/movie_rating"/>

        <TextView
            android:id="@+id/movieRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:paddingTop="4dp"
            android:text="@string/movie_release"/>

        <TextView
            android:id="@+id/movieGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:paddingTop="4dp"
            android:text="@string/movie_genres"/>

        <TextView
            android:id="@+id/movieOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:paddingTop="12dp"
            android:text="@string/movie_overview"/>
    </LinearLayout>
</ScrollView>
